# quickstart

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
c-sharp/: BridgeToken.cs  Citadel.cs  Dockerfile  Program.cs  README.md  Startup.cs  Truv.cs  c-sharp.csproj
c-sharp/Controllers/: AdminController.cs  BridgeTokenController.cs  DdsController.cs  DepositSwitchController.cs  FasController.cs  FundingSwitchController.cs  PaycheckLinkedLoanController.cs  RefreshController.cs  RootController.cs  VerificationController.cs  Webhook.cs
c-sharp/Properties/: launchSettings.json
golang/: Dockerfile  README.md  citadel.go  go.mod  main.go  truv.go
html/: admin-directory.html  admin-report.html  admin.html  dds.html  deposit_switch.html  employment.html  fas.html  income.html  index.html  pll.html
node/: .prettierrc.json  Dockerfile  README.md  package-lock.json  package.json
node/src/: citadel.js  index.js  sample-app.js  serve.js  truv.js
python/: Dockerfile  README.md  docker-compose.yml  requirements.dev.txt  requirements.txt  setup.cfg
python/src/: naive_api_client.py  server.py  truv.py
python/src/templates/: admin.html  employment.html  income.html  index.html
ruby/: Dockerfile  Gemfile  README.md
ruby/app/controllers/: admin_controller.rb  bridge_token_controller.rb  dds_controller.rb  deposit_switch_controller.rb  fas_controller.rb  funding_switch_controller.rb  main_controller.rb  pll_controller.rb  refresh_controller.rb  verification_controller.rb  (+1 more)
ruby/config/: application.rb  puma.rb  routes.rb
(+18 files in other folders)
