[metadata]
name = quickstart
description = Truv Python Quickstart app
author = Pavel Kuznetsov
author_email = pavel.kuznetsov@truv.com
maintainer = Dmitry Gerasimenko
maintainer_email = dmitry.gerasimenko@truv.com
url = https://truv.com
license = ISC

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.10